--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
     <figure class="hover-effect">
 
-                        <a href="responsive_v2.html"><img src="img/portfolio/responsive_site_v2.png" alt="responsive v2" class="image" /></a>
+                        <a target="_blank" href="responsive_v2.html"><img src="img/portfolio/responsive_site_v2.png" alt="responsive v2" class="image" /></a>
 
       <figcaption>
 
