last fix 4 real

--- a/responsive_v2.html
+++ b/responsive_v2.html
@@ -53,7 +53,7 @@
 
                 <div class="grid">
 
-                    <a href="http://bundee.art/kea/01-web/04-responsive/01_04_02_responsive_v2/index.html">
+                    <a target="_blank" href="http://bundee.art/kea/01-web/04-responsive/01_04_02_responsive_v2/index.html">
                         <figure class="hover-effect">
 
                             <img src="img/portfolio/responsive/responsive_site.png" alt="pilot" />
