last last last fix

--- a/cv.html
+++ b/cv.html
@@ -77,7 +77,7 @@
               <div class="column">
 
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+              <p>Jeg er en energisk ung fyr på 22 som elsker alt der har at gøre med design. Jeg brugte Photoshop for første gang for omkring 10 år siden og har efterfølgende eksperimenteret med de forskellige Adobe programmer. I min fritid elsker jeg at være aktiv, spille musik, tegne, men siden jeg er startet på dette studie bruger jeg rigtig meget af min fritid på at lave designrelaterede ting. </p>
 
 
                    <br>
@@ -132,71 +132,6 @@
 
 
 
-        <div class="sectionwrapper">
-
-          <div class="column">
-
-
-                      <div class="grid">
-
-    <figure class="hover-effect">
-
-                         <img src="img/portfolio/pilot/1.png" alt="">
-
-
-
-                    </figure>
-
-
-        </div>
-
-
-
-
-        </div>
-
-        <div class="column">
-
-
-                      <div class="grid">
-
-    <figure class="hover-effect">
-
-                        <img src="img/portfolio/pilot/2.png" alt="pilot" />
-
-
-
-                    </figure>
-
-
-        </div>
-
-        </div>
-
-
-                    <div class="column">
-
-
-                      <div class="grid">
-
-    <figure class="hover-effect">
-
-                         <img src="img/portfolio/pilot/3.png" alt="">
-
-
-
-                    </figure>
-
-
-        </div>
-
-
-
-
-        </div>
-
-
-        </div>
 
 
 
